# codex-metrics-lambda

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.deployer  Dockerfile.test-python  Dockerfile.test-ts  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
python/: Dockerfile  README.md  pyproject.toml
python/scripts/: deploy-local.sh  invoke_local.py
python/src/: aggregator.py  handler.py  openai_admin.py  types.py
python/tests/: test_aggregator.py
scripts/: dashboard.ts  deploy-all.sh  deploy-local.sh  invoke-local.ts
src/: aggregator.ts  index.ts  openai-admin.ts  types.ts
tests/: aggregator.test.ts
